--- a/snake.css
+++ b/snake.css
@@ -2,3 +2,17 @@ canvas#snake {
   border: 2px solid #333;
   box-shadow: 4px 4px 4px #777;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    left: 180px;
+    top: 250px;
+    width: 25%;
+    height: 25%;
+    background-color: rgb(0,0,255);
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;
+}
+
